<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curved_background"
    android:padding="15dp">

    <TextView
        android:id="@+id/titleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_person_details"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_marker_background"
        android:hint="@string/name_"
        android:textColor="@color/colorText"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleDetail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ageEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorText"
        android:inputType="number"
        android:maxLength="2"
        android:background="@drawable/custom_marker_background"
        android:hint="@string/age"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEdt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/relationEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorText"
        android:background="@drawable/custom_marker_background"
        android:hint="@string/relation"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ageEdt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/latlongEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorText"
        android:background="@drawable/custom_marker_background"
        android:hint="@string/lat_long"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relationEdt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/addressEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_marker_background"
        android:hint="@string/address_"
        android:textColor="@color/colorText"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latlongEdt" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorRed"
        android:text="@string/close"
        android:visibility="gone"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEdt" />
</androidx.constraintlayout.widget.ConstraintLayout>